kubernetes/deployment-postgre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: bitnami/postgresql:14.15.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-storage
    volumes:
      - name: postgresql-storage
        persistentVolumeClaim:
          claimName: pvc-postgresql
