kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server
  namespace: app
  labels:
    app: app-server
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/part: "8080"
spec:
  selector:
    app: app-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
