kubernetes/svc-postgre.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-postgresql
spec:
  selector:
    app: postgresql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
